@@ -43,7 +43,6 @@
       "Locked": true,
       "X": 10,
       "Y": 15,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -51,7 +50,6 @@
       "Locked": true,
       "X": 5,
       "Y": 15,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -59,7 +57,6 @@
       "Locked": true,
       "X": 3,
       "Y": 13,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -67,7 +64,6 @@
       "Locked": true,
       "X": 12,
       "Y": 13,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -75,7 +71,6 @@
       "Locked": true,
       "X": 12,
       "Y": 7,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -83,7 +78,6 @@
       "Locked": true,
       "X": 3,
       "Y": 7,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -114,7 +108,6 @@
       "Locked": true,
       "X": 7,
       "Y": 14,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -122,7 +115,6 @@
       "Locked": true,
       "X": 10,
       "Y": 13,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -130,7 +122,6 @@
       "Locked": true,
       "X": 5,
       "Y": 13,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -138,7 +129,6 @@
       "Locked": true,
       "X": 5,
       "Y": 4,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -146,7 +136,6 @@
       "Locked": true,
       "X": 10,
       "Y": 4,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -154,7 +143,6 @@
       "Locked": true,
       "X": 10,
       "Y": 2,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -162,7 +150,6 @@
       "Locked": true,
       "X": 5,
       "Y": 2,
-      "BarrelId": -1,
       "KeyBinding": 4
     },
     {
@@ -170,7 +157,6 @@
       "Locked": true,
       "X": 12,
       "Y": 5,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -178,7 +164,6 @@
       "Locked": true,
       "X": 3,
       "Y": 5,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -186,7 +171,6 @@
       "Locked": true,
       "X": 12,
       "Y": 11,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -194,7 +178,6 @@
       "Locked": true,
       "X": 3,
       "Y": 11,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -202,7 +185,6 @@
       "Locked": true,
       "X": 10,
       "Y": 11,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -210,7 +192,6 @@
       "Locked": true,
       "X": 5,
       "Y": 11,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -218,7 +199,6 @@
       "Locked": true,
       "X": 10,
       "Y": 9,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -226,7 +206,6 @@
       "Locked": true,
       "X": 5,
       "Y": 9,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -234,7 +213,6 @@
       "Locked": true,
       "X": 10,
       "Y": 7,
-      "BarrelId": -1,
       "KeyBinding": 1
     },
     {
@@ -242,7 +220,6 @@
       "Locked": true,
       "X": 5,
       "Y": 7,
-      "BarrelId": -1,
       "KeyBinding": 1
     }
   ]
