@@ -1,0 +1,42 @@
+{
+  "ItemType": 6,
+  "Id": 5006,
+  "ShipCategory": 3,
+  "Name": "Shooting Star",
+  "SizeClass": 4,
+  "IconImage": "shooting star.png",
+  "IconScale": 1.0,
+  "ModelImage": "shooting star.png",
+  "ModelScale": 6.5,
+  "EnginePosition": {
+    "x": -0.9
+  },
+  "EngineColor": "#E915E5",
+  "BuiltinDevices": [
+    8000
+  ],
+  "Layout": "0000000000000000000000000000000000033220000000000000000044432220000000000000023444322200000000000022234443222300000000003222333332223000000001132223444322231000000111322234443222311000001113222344432223110000011132223333322231100001111322234443222311100011113222344432223111101111132223444322231111011111322233333222311111111113222322232223111110111132223222322231111001111322232223222311100001113222333332223110000001132223555322231000000011322235553222310000000000022355532223000000000000000000022000000000000000000000000000000",
+  "Barrels": [
+    {
+      "Position": {
+        "x": 0.35
+      },
+      "PlatformType": 2,
+      "WeaponClass": "CL"
+    },
+    {
+      "Position": {
+        "x": 0.35
+      },
+      "PlatformType": 2,
+      "WeaponClass": "CL"
+    },
+    {
+      "Position": {
+        "x": 0.35
+      },
+      "PlatformType": 2,
+      "WeaponClass": "CL"
+    }
+  ]
+}
